--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="nav">
         <div class="rside">
-            <a href="https://bit.ly/3VJmtEe" class="link nav-text arabic">تحميل</a>
+            <a href="https://bit.ly/3DlON9o" class="link nav-text arabic">تحميل</a>
         </div>
         <div class="lside">
             <img src="logo.png" alt="">
@@ -21,7 +21,7 @@
             <span class="h6">HeEdu V10.0</span> <br>
             <img class="main-img" src="512.png" alt="">
             <p>تحديث بتاريخ 15/12/2024</p>
-            <a href="https://bit.ly/3VJmtEe" class="link arabic btn">تحميــــل</a>
+            <a href="https://bit.ly/3DlON9o" class="link arabic btn">تحميــــل</a>
         </div>
         
     </div>
